Add comment in normalize.scss

--- a/src/static/scss/normalize.scss
+++ b/src/static/scss/normalize.scss
@@ -426,6 +426,15 @@ th {
   padding: 0;
 }
 
+
+/* =============================================================================================================== */
+/* ======================================== End of original normalize.css ======================================== */
+/* =============================================================================================================== */
+
+
+/**
+ * Define global class for common usage
+ */
 .hidden{
 	display: none !important;
 }
