[EDIT] 把非重置的样式分离到base.scss

--- a/src/static/scss/index.scss
+++ b/src/static/scss/index.scss
@@ -1,4 +1,9 @@
 @charset "utf-8";
 
 @import "normalize.scss";
+@import "base.scss";
 @import "theme.scss";
+
+body{
+    font-family: 'Source Sans Pro', 'Helvetica Neue', Arial, sans-serif;
+}
