--- a/src/static/scss/index.scss
+++ b/src/static/scss/index.scss
@@ -7,3 +7,29 @@
 body{
     font-family: 'Source Sans Pro', 'Helvetica Neue', Arial, sans-serif;
 }
+
+.g-mask{
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0,0,0, 0.75);
+    z-index: 10;
+}
+.g-dialog{
+    box-sizing: border-box;
+    position: fixed;
+    top: 40%;
+    left: 20%;
+    text-align: center;
+    width: 60%;
+    border-radius: 3px;
+    padding: 20px;
+    background-color: $bgColor1;
+    z-index: 20;
+}
+.g-loading{
+}
