--- a/src/static/scss/normalize.scss
+++ b/src/static/scss/normalize.scss
@@ -431,3 +431,13 @@ th {
 /* ======================================== End of original normalize.css ======================================== */
 /* =============================================================================================================== */
 
+ul, li{
+  list-style-type: none;
+}
+
+input, button, image, video{
+  border: 0;
+  margin: 0;
+  padding: 0;
+  outline: 0;
+}
