--- a/src/static/scss/theme.scss
+++ b/src/static/scss/theme.scss
@@ -4,6 +4,9 @@ $mainColor: #00a6fb !default;
 $color1: #cee0dc !default;
 $color2: #cbeaa6 !default;
 
+$darkColor1: #000000 !default;
+$darkColor2: rgba(0,0,0, 0.75) !default;
+
 $bgColor1: #ffffff !default;
 $bgColor2: #f3f9d2 !default;
 
