--- a/src/static/component/timeTable/timeTable.jade
+++ b/src/static/component/timeTable/timeTable.jade
@@ -1,1 +1,15 @@
-timeTable.jade
+div#timeTable
+    div.filterBox
+    div.tt-container
+        ul.tt-dateList
+            li.tt-date(v-for="date in dateList")
+                | {{ date.dateStr2 }}
+        ul.tt-ppl(v-for="ppl in pplList")
+            li.tt-name
+                | {{ ppl.name }}
+            li.tt-date(v-for="date in dateList")
+                ul.tt-task(v-show="ppl[date] && ppl[date].isOnLeave === false")
+                    template(v-if="ppl[date] && ppl[date].tasks")
+                        li.tt-taskItem(v-for="task in ppl[date].tasks")
+                div.tt-leave(v-show="ppl[date] && ppl[date].isOnLeave === true")
+                    | {{ ppl.leaveType }}
