--- a/src/static/scss/normalize.scss
+++ b/src/static/scss/normalize.scss
@@ -433,6 +433,10 @@ th {
 
 ul, li{
   list-style-type: none;
+  border: 0;
+  margin: 0;
+  padding: 0;
+  outline: 0;
 }
 
 input, button, image, video{
