--- a/src/static/scss/theme.scss
+++ b/src/static/scss/theme.scss
@@ -15,46 +15,45 @@ $fontColor2: rgba(0,0,0, 0.75) !default;
 $fontColor3: #ffffff !default;
 $fontColor4: rgba(255,255,255, 0.75) !default;
 
-.ui-font1{
+%ui-font1{
     color: $fontColor;
     font-size: 18px;
     font-weight: bold;
     line-height: 28px;
 }
-.ui-font2{
+%ui-font2{
     color: $fontColor;
     font-size: 16px;
     line-height: 24px;
 }
-.ui-font3{
+%ui-font3{
     color: $fontColor2;
     font-size: 16px;
-    font-weight: bold;
     line-height: 24px;
 }
-.ui-font4{
+%ui-font4{
     color: $fontColor2;
     font-size: 14px;
     line-height: 22px;
 }
-.ui-font1-rev{
+%ui-font1-rev{
     color: $fontColor3;
     font-size: 18px;
     font-weight: bold;
     line-height: 28px;
 }
-.ui-font2-rev{
+%ui-font2-rev{
     color: $fontColor3;
     font-size: 16px;
     line-height: 24px;
 }
-.ui-font3-rev{
+%ui-font3-rev{
     color: $fontColor4;
     font-size: 16px;
     font-weight: bold;
     line-height: 24px;
 }
-.ui-font4-rev{
+%ui-font4-rev{
     color: $fontColor4;
     font-size: 14px;
     line-height: 22px;
