--- a/src/static/component/details/details.jade
+++ b/src/static/component/details/details.jade
@@ -1,42 +1,51 @@
-div.#details(v-show="showDetails")
+div#details(v-show="showDetails")
     div.g-mask
-    div.g-dialog-L
+    div.g-dialog-L(v-if="!!task")
         div.title
             | {{ task.name }}
         ul.info-wrapper
-            li.info-row
+            li.info-row.cf
                 div.info-key
                     | 参与人员
                 div.info-val
-                    div.info-val-row(v-for="ppl in task.asg")
-                        //- TODO
-            li.info-row
+                    ul.ppl-info(v-for="ppl in task.asg")
+                        li.ppl-info-name
+                            | {{ ppl.name }} 
+                        li.ppl-info-val
+                            div.val-item(v-for="(time, phase) in ppl.effort")
+                                | {{ phase | phaseToString }} {{ time | timeToString }}
+            li.info-row.cf
                 div.info-key
                     | 项目经理
                 div.info-val
                     | {{ task.pjm }}
-            li.info-row
+            li.info-row.cf
                 div.info-key
                     | 产品经理
                 div.info-val
                     | {{ task.pdm }}
-            li.info-row
+            li.info-row.cf
                 div.info-key
                     | 美术设计
                 div.info-val
                     | {{ task.dsg }}
-            li.info-row
+            li.info-row.cf
                 div.info-key
                     | web后端
                 div.info-val
                     | {{ task.wbe }}
-            li.info-row
+            li.info-row.cf
                 div.info-key
                     | 测试人员
                 div.info-val
                     | {{ task.tsr }}
-            li.info-row
+            li.info-row.cf
                 div.info-key
                     | 备注
                 div.info-val
                     | {{ task.remark }}
+        div.btn-section
+            a.cancel-btn(@click="cancel")
+                | 取消
+            a.confirm-btn(@click="edit")
+                | 修改
