--- a/src/static/component/details/details.jade
+++ b/src/static/component/details/details.jade
@@ -45,7 +45,7 @@ div#details(v-show="showDetails")
                 div.info-val
                     | {{ task.remark }}
         div.btn-section
-            a.cancel-btn(@click="cancel")
-                | 取消
-            a.confirm-btn(@click="edit")
+            a.back-btn(@click="getBack")
+                | 返回
+            a.edit-btn(v-show="showEditBtn", @click="edit")
                 | 修改
