--- a/src/static/component/details/details.scss
+++ b/src/static/component/details/details.scss
@@ -45,7 +45,7 @@
     text-align: center;
     padding: 10px 0;
 }
-.cancel-btn, .confirm-btn{
+.back-btn, .edit-btn{
     display: inline-block;
     line-height: 30px;
     cursor: pointer;
@@ -54,11 +54,11 @@
     border-radius: 3px;
     margin: 0 10px;
 }
-.cancel-btn{
+.back-btn{
     @extend %ui-font1;
     color: $mainColor;
 }
-.confirm-btn{
+.edit-btn{
     @extend %ui-font1-rev;
     background-color: $mainColor;
 }
