--- a/src/static/component/details/details.scss
+++ b/src/static/component/details/details.scss
@@ -2,6 +2,30 @@
 
 @import "../../scss/theme.scss";
 
+$bColor: #aaaaaa;
+$bColor2: #5bc0de;
+
+#details{
+    border: 1px solid $bColor;
+    border-radius: 5px;
+    margin: 0 20px 25px;
+    padding: 8px;
+    &.editable{
+        box-shadow: 0 0 5px $bColor2;
+        border-color: $bColor2;
+    }
+    .nameInput{
+        border-bottom: 1px solid $bColor;
+        padding: 0 5px;
+        &:focus{
+            border-bottom-color: $bColor2;
+        }
+    }
+    .remarkInput{
+        width: 90%;
+    }
+}
+
 .title{
     @extend %ui-font1;
     text-align: center;
@@ -20,11 +44,19 @@
     float: left;
     font-weight: bold;
     padding-right: 15px;
+    &.newline{
+        float: none;
+        display: block;
+    }
 }
 .info-val{
     @extend %ui-font4;
     float: left;
     padding-left: 4px;
+    &.newline{
+        float: none;
+        display: block;
+    }
 }
 
 .ppl-info{
@@ -45,7 +77,7 @@
     text-align: center;
     padding: 10px 0;
 }
-.back-btn, .edit-btn{
+.back-btn, .edit-btn, .confirm-btn{
     display: inline-block;
     line-height: 30px;
     cursor: pointer;
@@ -58,7 +90,7 @@
     @extend %ui-font1;
     color: $mainColor;
 }
-.edit-btn{
+.edit-btn, .confirm-btn{
     @extend %ui-font1-rev;
     background-color: $mainColor;
 }
