--- a/src/static/scss/theme.scss
+++ b/src/static/scss/theme.scss
@@ -10,6 +10,9 @@ $darkColor2: rgba(102,102,102, 0.75) !default;
 $bgColor1: #ffffff !default;
 $bgColor2: #f3f9d2 !default;
 
+$bColor: #aaaaaa !default;
+$bColor2: #5bc0de !default;
+
 $fontColor: #000000 !default;
 $fontColor2: rgba(0,0,0, 0.75) !default;
 $fontColor3: #ffffff !default;
