--- a/src/static/component/details/details.scss
+++ b/src/static/component/details/details.scss
@@ -2,14 +2,11 @@
 
 @import "../../scss/theme.scss";
 
-$bColor: #aaaaaa;
-$bColor2: #5bc0de;
-
 #details{
     border: 1px solid $bColor;
     border-radius: 5px;
-    margin: 0 20px 25px;
-    padding: 8px;
+    margin: 20px 5px;
+    padding: 10px 18px;
     &.editable{
         box-shadow: 0 0 5px $bColor2;
         border-color: $bColor2;
@@ -43,7 +40,6 @@ $bColor2: #5bc0de;
     @extend %ui-font2;
     float: left;
     font-weight: bold;
-    padding-right: 15px;
     &.newline{
         float: none;
         display: block;
@@ -52,7 +48,7 @@ $bColor2: #5bc0de;
 .info-val{
     @extend %ui-font4;
     float: left;
-    padding-left: 4px;
+    padding-left: 20px;
     &.newline{
         float: none;
         display: block;
