--- a/src/static/component/details/details.scss
+++ b/src/static/component/details/details.scss
@@ -83,10 +83,8 @@
     margin: 0 10px;
 }
 .back-btn{
-    @extend %ui-font1;
-    color: $mainColor;
+    @extend %ui-btn2;
 }
 .edit-btn, .confirm-btn{
-    @extend %ui-font1-rev;
-    background-color: $mainColor;
+    @extend %ui-btn;
 }
