--- a/src/static/component/details/details.jade
+++ b/src/static/component/details/details.jade
@@ -63,7 +63,7 @@ div#details(v-show="showDetails", :class=" mode === 1 ? 'editable' : '' ")
                     | {{ task.remark }}
                 textarea.remarkInput(type="text", v-model="task2.remark", placeholder="备注", resize="none", v-show="mode === 1")
     div.btn-section
-        button.back-btn(@click="getBack")
+        button.back-btn(@click="goBack")
             | 返回
         button.edit-btn(v-show="mode === 0", @click="edit")
             | 修改
