--- a/src/static/component/timeTable/timeTable.jade
+++ b/src/static/component/timeTable/timeTable.jade
@@ -17,11 +17,11 @@ div#timeTable(:class=" mode === 1 ? 'editable' : '' ")
                 ul.tt-ppl.cf(v-for="ppl in pplList")
                     li.tt-date(v-for="date in dateList")
                         ul.tt-task(v-if="!ppl[date.dateStr] || !ppl[date.dateStr].leaveType")
-                            li.tt-taskItem(:style="{ backgroundColor: ppl[date.dateStr][0].color }")
+                            li.tt-taskItem(@click="selectTask(ppl[date.dateStr][0])", :style="{ backgroundColor: ppl[date.dateStr][0].color }")
                                 | {{ ppl[date.dateStr][0].stage }}
-                            li.tt-taskItem(:style="{ backgroundColor: ppl[date.dateStr][1].color }")
+                            li.tt-taskItem(@click="selectTask(ppl[date.dateStr][1])", :style="{ backgroundColor: ppl[date.dateStr][1].color }")
                                 | {{ ppl[date.dateStr][1].stage }}
-                        div.tt-leave(v-if="ppl[date.dateStr] && ppl[date.dateStr].leaveType")
+                        div.tt-leave(v-if="ppl[date.dateStr] && ppl[date.dateStr].leaveType", @click="")
                             | {{ ppl[date.dateStr].leaveType }}
 
     div.taskView
@@ -33,4 +33,14 @@ div#timeTable(:class=" mode === 1 ? 'editable' : '' ")
         div.g-mask
         div.g-dialog
             div.msg 当前正在编辑，请返回后再次点击查看详情
+
+    div#addTaskDialog(v-show="showAddTaskDialog")
+        div.g-mask
+        div.g-dialog
+            div.msg 是否新建任务记录？
+            div.btn-section
+                button.back-btn(@click="goBack")
+                    | 返回
+                button.confirm-btn(@click="addTask")
+                    | 确定
 
