--- a/src/static/component/timeTable/timeTable.jade
+++ b/src/static/component/timeTable/timeTable.jade
@@ -21,8 +21,8 @@ div#timeTable(:class=" mode === 1 ? 'editable' : '' ")
                                 | {{ ppl[date.dateStr][0].stage }}
                             li.tt-taskItem(@click="selectTask(ppl[date.dateStr][1])", :style="{ backgroundColor: ppl[date.dateStr][1].color }")
                                 | {{ ppl[date.dateStr][1].stage }}
-                        div.tt-leave(v-if="ppl[date.dateStr] && ppl[date.dateStr].leaveType", @click="")
-                            | {{ ppl[date.dateStr].leaveType }}
+                        div.tt-leave(v-if="ppl[date.dateStr] && ppl[date.dateStr][2].leaveType", @click="")
+                            | {{ ppl[date.dateStr][2].leaveType }}
 
     div.taskView
         ul.tv-list.cf
