--- a/src/static/component/timeTable/timeTable.scss
+++ b/src/static/component/timeTable/timeTable.scss
@@ -87,3 +87,9 @@
     border-radius: 3px;
     margin: 2px;
 }
+
+input.stageInput{
+    text-align: center;
+    width: 100%;
+    height: 100%;
+}
