--- a/src/static/component/timeTable/timeTable.jade
+++ b/src/static/component/timeTable/timeTable.jade
@@ -19,12 +19,12 @@ div#timeTable(:class=" mode === 1 ? 'editable' : '' ")
                         ul.tt-task(v-if="!ppl[date.dateStr] || !ppl[date.dateStr].leaveType")
                             li.tt-taskItem(@click="selectTask(ppl[date.dateStr][0], ppl.id, 0)", :style="{ backgroundColor: ppl[date.dateStr][0].color }")
                                 template(v-if="ppl[date.dateStr][0].editable")
-                                    input.stageInput(v-model="daylyWork", @input="updateTask(ppl.id, ppl.name, date.dateStr, 0)", @blur="unselectTask", v-focus="autoFocusInput")
+                                    input.stageInput(v-model="daylyWork", @input="updateTask(ppl.id, ppl.name, date.dateStr, 0)", @keydown.tab.prevent="selectNext(ppl[nextDate(date.dateStr)][0], ppl.id, 0)", @blur="unselectTask", v-focus="autoFocusInput")
                                 template(v-else)
                                     | {{ ppl[date.dateStr][0].stage }}
                             li.tt-taskItem(@click="selectTask(ppl[date.dateStr][1], ppl.id, 1)", :style="{ backgroundColor: ppl[date.dateStr][1].color }")
                                 template(v-if="ppl[date.dateStr][1].editable")
-                                    input.stageInput(v-model="daylyWork", @input="updateTask(ppl.id, ppl.name, date.dateStr, 1)", @blur="unselectTask", v-focus="autoFocusInput")
+                                    input.stageInput(v-model="daylyWork", @input="updateTask(ppl.id, ppl.name, date.dateStr, 1)", @keydown.tab.prevent="selectNext(ppl[nextDate(date.dateStr)][1], ppl.id, 1)", @blur="unselectTask", v-focus="autoFocusInput")
                                 template(v-else)
                                     | {{ ppl[date.dateStr][1].stage }}
                         div.tt-leave(v-if="ppl[date.dateStr] && ppl[date.dateStr][2].leaveType", @click="")
