--- a/src/static/component/timeTable/timeTable.jade
+++ b/src/static/component/timeTable/timeTable.jade
@@ -1,4 +1,4 @@
-div#timeTable(:class=" mode === 1 ? 'editable' : '' ")
+div#timeTable(:class="(mode === 1 || mode === 2) ? 'editable' : '' ")
     div.filterBox
 
     div.tt-container
