[EDIT] 添加删除任务功能

--- a/static/src/component/details/details.jade
+++ b/static/src/component/details/details.jade
@@ -1,75 +1,88 @@
-div#details(v-show="showDetails", :class="(mode === 1 || mode === 2) ? 'editable' : '' ")
-    div.title
-        span(v-show="mode === 0")
-            | {{ task.name }}
-        input.nameInput(type="text", v-model="task2.name", placeholder="需求名", v-show="mode === 1 || mode === 2")
-    ul.info-wrapper
-        li.info-row.cf
-            div.info-key
-                | 参与人员
-            div.info-val
-                template(v-if="mode === 0")
-                    ul.ppl-info(v-for="ppl in task.asg")
-                        li.ppl-info-name
-                            | {{ ppl.name }} 
-                        li.ppl-info-val
-                            div.val-item(v-for="(time, phase) in ppl.effort")
-                                | {{ phase | phaseToString }} {{ time | timeToString }}
-                template(v-if="mode === 1 || mode === 2")
-                    ul.ppl-info(v-for="ppl in task2.asg")
-                        li.ppl-info-name
-                            | {{ ppl.name }} 
-                        li.ppl-info-val
-                            div.val-item(v-for="(time, phase) in ppl.effort")
-                                | {{ phase | phaseToString }} {{ time | timeToString }}
-        li.info-row.cf
-            div.info-key
-                | 项目经理
-            div.info-val
-                span(v-show="mode === 0")
-                    | {{ task.pjm }}
-                input.nameInput(type="text", v-model="task2.pjm", placeholder="项目经理", v-show="mode === 1 || mode === 2")
-        li.info-row.cf
-            div.info-key
-                | 产品经理
-            div.info-val
-                span(v-show="mode === 0")
-                    | {{ task.pdm }}
-                input.nameInput(type="text", v-model="task2.pdm", placeholder="产品经理", v-show="mode === 1 || mode === 2")
-        li.info-row.cf
-            div.info-key
-                | 美术设计
-            div.info-val
-                span(v-show="mode === 0")
-                    | {{ task.dsg }}
-                input.nameInput(type="text", v-model="task2.dsg", placeholder="美术设计", v-show="mode === 1 || mode === 2")
-        li.info-row.cf
-            div.info-key
-                | web后端
-            div.info-val
-                span(v-show="mode === 0")
-                    | {{ task.wbe }}
-                input.nameInput(type="text", v-model="task2.wbe", placeholder="web后端", v-show="mode === 1 || mode === 2")
-        li.info-row.cf
-            div.info-key
-                | 测试人员
-            div.info-val
-                span(v-show="mode === 0")
-                    | {{ task.tsr }}
-                input.nameInput(type="text", v-model="task2.tsr", placeholder="测试人员", v-show="mode === 1 || mode === 2")
-        li.info-row.cf
-            div.info-key.newline
-                | 备注
-            div.info-val.newline
-                span(v-show="mode === 0")
-                    | {{ task.remark }}
-                textarea.remarkInput(type="text", v-model="task2.remark", placeholder="备注", v-show="mode === 1 || mode === 2")
-    div.btn-section
-        button.back-btn(@click="goBack")
-            | 返回
-        button.edit-btn(v-show="mode === 0 && !!isAdmin", @click="edit")
-            | 修改
-        button.confirm-btn(v-show="mode === 1 && !!isAdmin", @click="confirmUpdate")
-            | 确定
-        button.confirm-btn(v-show="mode === 2 && !!isAdmin", @click="confirmAdd")
-            | 确定
+div#details(v-show="showDetails")
+    div.detail-box(:class="(mode === 1 || mode === 2) ? 'editable' : '' ")
+        div.title
+            span(v-show="mode === 0")
+                | {{ task.name }}
+            input.nameInput(type="text", v-model="task2.name", placeholder="需求名", v-show="mode === 1 || mode === 2")
+        ul.info-wrapper
+            li.info-row.cf
+                div.info-key
+                    | 参与人员
+                div.info-val
+                    template(v-if="mode === 0")
+                        ul.ppl-info(v-for="ppl in task.asg")
+                            li.ppl-info-name
+                                | {{ ppl.name }} 
+                            li.ppl-info-val
+                                div.val-item(v-for="(time, phase) in ppl.effort")
+                                    | {{ phase | phaseToString }} {{ time | timeToString }}
+                    template(v-if="mode === 1 || mode === 2")
+                        ul.ppl-info(v-for="ppl in task2.asg")
+                            li.ppl-info-name
+                                | {{ ppl.name }} 
+                            li.ppl-info-val
+                                div.val-item(v-for="(time, phase) in ppl.effort")
+                                    | {{ phase | phaseToString }} {{ time | timeToString }}
+            li.info-row.cf
+                div.info-key
+                    | 项目经理
+                div.info-val
+                    span(v-show="mode === 0")
+                        | {{ task.pjm }}
+                    input.nameInput(type="text", v-model="task2.pjm", placeholder="项目经理", v-show="mode === 1 || mode === 2")
+            li.info-row.cf
+                div.info-key
+                    | 产品经理
+                div.info-val
+                    span(v-show="mode === 0")
+                        | {{ task.pdm }}
+                    input.nameInput(type="text", v-model="task2.pdm", placeholder="产品经理", v-show="mode === 1 || mode === 2")
+            li.info-row.cf
+                div.info-key
+                    | 美术设计
+                div.info-val
+                    span(v-show="mode === 0")
+                        | {{ task.dsg }}
+                    input.nameInput(type="text", v-model="task2.dsg", placeholder="美术设计", v-show="mode === 1 || mode === 2")
+            li.info-row.cf
+                div.info-key
+                    | web后端
+                div.info-val
+                    span(v-show="mode === 0")
+                        | {{ task.wbe }}
+                    input.nameInput(type="text", v-model="task2.wbe", placeholder="web后端", v-show="mode === 1 || mode === 2")
+            li.info-row.cf
+                div.info-key
+                    | 测试人员
+                div.info-val
+                    span(v-show="mode === 0")
+                        | {{ task.tsr }}
+                    input.nameInput(type="text", v-model="task2.tsr", placeholder="测试人员", v-show="mode === 1 || mode === 2")
+            li.info-row.cf
+                div.info-key.newline
+                    | 备注
+                div.info-val.newline
+                    span(v-show="mode === 0")
+                        | {{ task.remark }}
+                    textarea.remarkInput(type="text", v-model="task2.remark", placeholder="备注", v-show="mode === 1 || mode === 2")
+        div.btn-section
+            button.back-btn(@click="goBack")
+                | 返回
+            button.edit-btn(v-show="mode === 0 && !!isAdmin", @click="edit")
+                | 修改
+            button.confirm-btn(v-show="mode === 1 && !!isAdmin", @click="confirmUpdate")
+                | 确定
+            button.delete-btn(v-show="mode === 1 && !!isAdmin", @click="showDeleteDialog")
+                | 删除
+            button.confirm-btn(v-show="mode === 2 && !!isAdmin", @click="confirmAdd")
+                | 确定
+
+    div#addTaskDialog(v-show="showDeleteTaskDialog")
+        div.g-mask
+        div.g-dialog
+            div.msg 是否删除任务记录？(删除后将无法恢复)
+            div.btn-section
+                button.back-btn(@click="cancelDelete")
+                    | 返回
+                button.confirm-btn(@click="confirmDelete")
+                    | 确定
