--- a/static/src/scss/theme.scss
+++ b/static/src/scss/theme.scss
@@ -17,6 +17,7 @@ $fontColor: #000000 !default;
 $fontColor2: rgba(0,0,0, 0.75) !default;
 $fontColor3: #ffffff !default;
 $fontColor4: rgba(255,255,255, 0.75) !default;
+$warnFontColor: #ff2222 !default;
 
 %ui-font1{
     color: $fontColor;
