--- a/static/src/component/timeTable/timeTable.scss
+++ b/static/src/component/timeTable/timeTable.scss
@@ -49,6 +49,7 @@
     border-bottom: 1px solid $darkColor2;
     .tt-name{
         line-height: 44px;
+        cursor: pointer;
     }
 }
 .tt-name{
@@ -65,6 +66,33 @@
     text-align: center;
     min-height: 1px;
     width: 45px;
+}
+.tt-task{
+    position: relative;
+    &.onLeave{
+        box-shadow: 0 0 2px 1px #ff0000 inset;
+        &:after{
+            position: absolute;
+            top: 0;
+            right: 0;
+            content: ' ';
+            border-top: 3px solid #ff0000;
+            border-right: 3px solid #ff0000;
+            border-bottom: 3px solid transparent;
+            border-left: 3px solid transparent;
+        }
+        &:hover{
+            .tt-leave{
+                display: block;
+            }
+        }
+    }
+}
+.tt-leave{
+    display: none;
+    position: absolute;
+    top: 0;
+    right: 0;
 }
 .tt-taskItem{
     text-align: center;
