[EDIT] 修复层级问题

--- a/static/src/component/timeTable/timeTable.scss
+++ b/static/src/component/timeTable/timeTable.scss
@@ -28,6 +28,7 @@
     display: inline-block;
     // padding-bottom: 10px;
     background-color: $bgColor1;
+    z-index: 1;
 }
 .tt-wrapper{
     overflow-x: scroll;
