--- a/static/src/jade/index.jade
+++ b/static/src/jade/index.jade
@@ -3,6 +3,11 @@ html
     head
         meta(charset="utf-8")
         meta(name="renderer", content="webkit")
+        meta(http-equiv="Content-Type", content="text/html; charset=utf-8")
+        meta(name="apple-mobile-web-app-capable", content="yes")
+        meta(content="telephone=no", name="format-detection")
+        meta(content="email=no", name="format-detection")
+        meta(name="viewport", content="width=device-width, initial-scale=1, maximum-scale=1")
         title T-All
 
     body
